test/libsolidity/syntaxTests/literals/invalid_bin_number.sol
contract C {
    uint x = 0b10a;
}
// ----
// ParserError 8936: (26-30): Identifier-start is not allowed at end of a number.
